OK-738 【OKBET-UI改版-Android-我的】轉換記錄與設計稿不符

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1231,4 +1231,5 @@
     <string name="km">Km</string>
     <string name="league_filter">Lọc trận đấu</string>
     <string name="outlet">Trạm cược</string>
+    <string name="transfer_time">Thời gian chuyển đổi</string>
 </resources>
