--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1242,4 +1242,5 @@
     <string name="register_and_login">Sign Up/Login</string>
     <string name="km">Km</string>
     <string name="outlet">Outlet</string>
+    <string name="transfer_time">Time</string>
 </resources>
