--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -655,7 +655,7 @@
     <string name="all_plat_type">全部平台类型</string>
     <string name="visit_first">来去逛逛</string>
     <string name="bet_number">注数</string>
-    <string name="bet_money">下注金額</string>
+    <string name="bet_money">下注金额</string>
     <string name="profit_and_loss">盈亏</string>
     <string name="total_bet_number">总笔数：</string>
     <string name="total_profit_and_loss">总盈亏：</string>
