--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -123,7 +123,7 @@
     <string name="no_announcement">No announcement</string>
     <string name="lottery">Lottery</string>
     <string name="poker">Jackpot</string>
-    <string name="slot">Electric</string>
+    <string name="slot">Slot</string>
     <string name="fishing">Fishing</string>
     <string name="more">More</string>
     <string name="home_tan_main">HOME</string>
@@ -1212,7 +1212,7 @@
     <string name="bet_record_single">Singles</string>
     <string name="bet_record_parlay">Parlay</string>
     <string name="bet_slip_id_is_copied">Bet Slip ID is copied to clipboard</string>
-    <string name="no_more">No more data to display</string>
+    <string name="no_more">No more</string>
     <string name="main_tab_favorite">Favorite</string>
     <string name="my_favorite_empty">You don\'t have favorite events yet</string>
     <string name="cruel_write_off">Still delete</string>
@@ -1243,4 +1243,12 @@
     <string name="km">Km</string>
     <string name="outlet">Outlet</string>
     <string name="transfer_time">Time</string>
+    <string name="reset_password">Reset password</string>
+    <string name="my_bank_card">My bank card</string>
+    <string name="local_time">Local Time:</string>
+    <string name="half_first_short">1st Half</string>
+    <string name="half_second_short">2nd Half</string>
+    <string name="unbound_bank_card">No Bank Card/eWallet attached</string>
+    <string name="change_other_ID_photos">Change to other ID photos</string>
+    <string name="customer_service">If you need help, please</string>
 </resources>
