[Fix] OK-743【OKBET-UI改版-Android-我的】 提款設置-子標題、新增渠道Button文案與原型不相符

--- a/app/src/main/res/values-th/strings.xml
+++ b/app/src/main/res/values-th/strings.xml
@@ -998,7 +998,7 @@
     <string name="text_bank_card_modify_success">แก้ไขบัตรธนาคารสำเร็จ</string>
     <string name="text_e_wallet_modify_success">แก้ไข eWallet สำเร็จ</string>
     <string name="bank_list_add">เพิ่ม %1$s</string>
-    <string name="add_credit_or_virtual">เพิ่มบัตรธนาคาร / สกุลเงินเสมือน / eWallet</string>
+    <string name="add_credit_or_virtual">เพิ่มบัตรธนาคาร / eWallet / สกุลเงินเสมือน</string>
     <string name="label_in_play_games">เปตอง</string>
     <string name="error_url_fail">ที่อยู่กระโดดผิด</string>
     <string name="error">ความผิดพลาด</string>
