--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -521,7 +521,7 @@
     <string name="add_credit_card">Add Bank Card</string>
     <string name="add_crypto_card">Add USDT</string>
     <string name="add_e_wallet">Add eWallet</string>
-    <string name="add_credit_or_virtual">add bank card / USDT / eWallet</string>
+    <string name="add_credit_or_virtual">add bank card / eWallet / USDT</string>
     <string name="create_bank">Bank</string>
     <string name="create_name">Full Name</string>
     <string name="hint_please_enter_create_name">Please enter your bank card name</string>
