--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -513,7 +513,7 @@
     <string name="add_credit_card">Thêm mới thẻ ngân hàng</string>
     <string name="add_crypto_card">Thêm mới tiền ảo</string>
     <string name="add_e_wallet">Thêm mới eWallet</string>
-    <string name="add_credit_or_virtual">Thêm mới thẻ ngân hàng / tiền ảo / eWallet</string>
+    <string name="add_credit_or_virtual">Thêm mới thẻ ngân hàng / eWallet / tiền ảo</string>
 
     <string name="create_bank">Tài khoản ngân hàng</string>
     <string name="create_name">Họ tên chủ thẻ</string>
