--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -512,7 +512,7 @@
     <string name="add_credit_card">新增银行卡</string>
     <string name="add_crypto_card">新增虚拟币</string>
     <string name="add_e_wallet">新增eWallet</string>
-    <string name="add_credit_or_virtual">新增银行卡 / 虚拟币 / eWallet</string>
+    <string name="add_credit_or_virtual">新增银行卡 / eWallet / 虚拟币</string>
     <string name="create_bank">开户银行</string>
     <string name="create_name">持卡人姓名</string>
     <string name="hint_please_enter_create_name">请输入您的银行卡姓名</string>
