--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -520,7 +520,7 @@
     <string name="add_credit_card">Add Bank Card</string>
     <string name="add_crypto_card">Add USDT</string>
     <string name="add_e_wallet">Add eWallet</string>
-    <string name="add_credit_or_virtual">add bank card / USDT / eWallet</string>
+    <string name="add_credit_or_virtual">add bank card / eWallet / USDT</string>
     <string name="create_bank">Bank</string>
     <string name="create_name">Full Name</string>
     <string name="hint_please_enter_create_name">Please enter your bank card name</string>
@@ -1246,7 +1246,7 @@
     <string name="half_first_short">上</string>
     <string name="half_second_short">下</string>
     <string name="bank_memory_card">储存卡</string>
-    <string name="my_bank_card">我的银行卡</string>
+    <string name="my_bank_card">我的银行卡 / eWallet / 虚拟币</string>
     <string name="my_favorite_empty">You don\'t have favorite events yet</string>
     <string name="remove_account_warning">Are you sure you want to cancel your current account?</string>
     <string name="cruel_write_off">Still delete</string>
