--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,8 +31,8 @@
     <string name="remember_password">Save this password</string>
     <string name="forget_password_question">Forgot password?</string>
     <string name="desc_forget_password">Please contact customer service</string>
-    <string name="sign_up_know">Sign up now</string>
-    <string name="not_sign_up">Not Sign up</string>
+    <string name="sign_up_know">Sign up now!</string>
+    <string name="not_sign_up">Don\'t have an account yet</string>
     <string name="recommend_code">Invite Code(Optional</string>
     <string name="hint_recommend_code">Please enter your invite code</string>
     <string name="error_recommend_code">Not available the outlet, please confirm</string>
@@ -1225,7 +1225,7 @@
     <string name="pls_file_type">请选择文件的类型</string>
     <string name="click_upload_id_photo">Click upload ID photo</string>
     <string name="change_other_ID_photos">Change to other ID photos</string>
-    <string name="customer_service_help">If you need help, please contact CS</string>
+    <string name="customer_service_help">If you need help, please contact Us</string>
     <string name="league_filter">Match filter</string>
     <string name="reverse_select">Inverse</string>
     <string name="video">Video</string>
