--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1147,7 +1147,7 @@
     <string name="kyc_pick_upload_id">请选择上传身份证明文件</string>
     <string name="kyc_pick_upload_id2">请上传能证明您身份的有效证件</string>
     <string name="kyc_size_2_mb">文件大小不超过2MB</string>
-    <string name="kyc_contact_service">遇到问题？请联系在线客服</string>
+    <string name="kyc_contact_service">如需帮助，请联系客服</string>
     <string name="kyc_contact_service_hilight">在线客服</string>
     <string name="kyc_reset">重置</string>
     <string name="kyc_verify_first">请先进行实名验证。</string>
