--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1252,4 +1252,5 @@
     <string name="change_other_ID_photos">Change to other ID photos</string>
     <string name="customer_service">If you need help, please</string>
     <string name="not_sign_up">Don\'t have an account yet</string>
+    <string name="no_search_match">No matches were found</string>
 </resources>
