--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1241,4 +1241,5 @@
     <string name="change_other_ID_photos">Thay ảnh ID khác</string>
     <string name="customer_service">Nếu cần trợ giúp, vui lòng</string>
     <string name="not_sign_up">Chưa có tài khoản</string>
+    <string name="no_search_match">Không tìm thấy trận đấu</string>
 </resources>
