--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -558,7 +558,7 @@
     <string name="bet_info_odd_content_changed">Tỷ lệ cược của một hoặc nhiều lựa chọn, điểm chấp hoặc điểm số đã được thay đổi</string>
     <string name="bet_info_odd_content_changed2">Tỷ lệ cược đã thay đổi</string>
     <string name="bet_list_single_warn">Có thể sử dụng cùng số tiền đặt cược để thực hiện tất cả các lựa chọn riêng lẻ</string>
-    <string name="bet_list_single">Đơn cược</string>
+    <string name="bet_list_single">Cược đơn</string> <!--M299-->
     <string name="bet_list_single_type">Cược đơn</string>
     <string name="bet_list_parlay_type">Cược xâu</string>
     <string name="bet_list_view_more_options">Nhiều lựa chọn hơn</string>
