--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -510,8 +510,8 @@
     <string name="hint_please_enter_withdraw_password">请输入提款密码</string>
     <string name="add_new">新增</string>
     <string name="add_credit_card">新增银行卡</string>
-    <string name="add_crypto_card">新增虚拟币</string>
-    <string name="add_e_wallet">新增eWallet</string>
+    <string name="add_crypto_card">新增虚拟币地址</string>
+    <string name="add_e_wallet">新增eWallet银行</string>
     <string name="add_credit_or_virtual">新增银行卡 / eWallet / 虚拟币</string>
     <string name="create_bank">开户银行</string>
     <string name="create_name">持卡人姓名</string>
