--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -512,7 +512,7 @@
     <string name="add_credit_card">新增银行卡</string>
     <string name="add_crypto_card">新增虚拟币地址</string>
     <string name="add_e_wallet">新增eWallet银行</string>
-    <string name="add_credit_or_virtual">新增银行卡 / eWallet / 虚拟币</string>
+    <string name="add_credit_or_virtual">新增%1$s</string>
     <string name="create_bank">开户银行</string>
     <string name="create_name">持卡人姓名</string>
     <string name="hint_please_enter_create_name">请输入您的银行卡姓名</string>
@@ -1249,11 +1249,11 @@
     <string name="outlet">投注站</string>
     <string name="transfer_time">转换时间</string>
     <string name="reset_password">重设密码</string>
-    <string name="my_bank_card">我的银行卡</string>
+    <string name="my_bank_card">我的%1$s</string>
     <string name="local_time">当地时间:</string>
     <string name="half_first_short">上</string>
     <string name="half_second_short">下</string>
-    <string name="unbound_bank_card">您尚未绑定银行卡/eWallet</string>
+    <string name="unbound_bank_card">您尚未绑定%1$s</string>
     <string name="change_other_ID_photos">变更其他证件照</string>
     <string name="customer_service">如需帮助，请</string>
 </resources>
