--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -433,7 +433,7 @@
     <string name="title_choose_currency">chọn thỏa thuận / Loại tiền</string>
     <string name="txv_recharge_count">Số tiền cần nạp</string>
     <string name="edt_hint_crypto_pay_count">Giới hạn %1$s～%2$s</string>
-    <string name="hint_rate">Tỷ giá：%1$s</string>
+    <string name="hint_rate">・Tỷ giá：%1$s</string>
     <string name="title_transaction_id">ID giao dịch chuỗi khối</string>
     <string name="hint_transaction_id">ID blockchain của bạn</string>
     <string name="hint_fee_rate">・Phí xử lý：%1$s</string>
